Added title and h1 tag

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto dos Bababoeys</title>
 </head>
 <body>
-    
+    <h1>Projeto Bababoey</h1>
+    <p> Sharles é gay</p>
 </body>
 </html>
