Created script file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Bababoey</title>
+    <title>Calculadora Bababoey</title>
+
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
-    <h1>Projeto Bababoey</h1>
-    <p> Sharles é gay</p>
+    <h1>Calculadora Bababoey</h1>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recu</p>
 </body>
 </html>
