sum function created

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>CALCULADORA BABABOEY</h1>
         <h3>DIGITE DOIS VALORES E ESCOLHA A OPERAÇÃO</h3>
         <div id="input-wrapper">
-        <br><input id="real" type="number" placeholder="Digite o valor um valor">
-        <br><input id="real" type="number" placeholder="Digite o valor um segundo valor">
+        <br><input id="real1" type="number" placeholder="Digite o valor um valor">
+        <br><input id="real2" type="number" placeholder="Digite o valor um segundo valor">
         </div>
-        <button id="button" onclick="sumNumber()">+</button>
+        <button id="button" onClick="sumNumber()">+</button>
     </div>
 </body>
 </html>
