Updated Main page with container div

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    <h1>Calculadora Bababoey</h1>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recu</p>
+    <div class="container">
+        <h1>CALCULADORA BABABOEY</h1>
+        <h3>DIGITE DOIS VALORES E ESCOLHA A OPERAÇÃO</h3>
+        <div id="input-wrapper">
+        <br><input id="real" type="number" placeholder="Digite o valor um valor">
+        <br><input id="real" type="number" placeholder="Digite o valor um segundo valor">
+        </div>
+        <button id="button" onclick="sumNumber()">+</button>
+    </div>
 </body>
 </html>
