multiple new buttons and function added to increase a calculator look-alike

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <br><input id="real2" type="number" placeholder="Digite o valor um segundo valor">
         </div>
         <button id="button" onClick="sumNumber()">+</button>
+        <button id="button" onClick="subNumber()">-</button><br>
+        <button id="button" onClick="divNumber()">/</button>
+        <button id="button" onClick="mulNumber()">*</button><br>
+        <h3>O PRODUTO SERÁ MOSTRADO NO TOPO DA PÁGINA.</h3>
     </div>
 </body>
 </html>
