Created two new divs, and buttons for operations

--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@
 </head>
 <body>
     <div class="container">
-        <h1>CALCULADORA BABABOEY</h1>
-        <h3>DIGITE DOIS VALORES E ESCOLHA A OPERAÇÃO</h3>
-        <div id="input-wrapper">
-        <br><input id="real1" type="number" placeholder="Digite o valor um valor">
-        <br><input id="real2" type="number" placeholder="Digite o valor um segundo valor">
+        <div class="calc">
+            <input id="inputNumber" type="number" placeholder="0">
+            
+            <button onClick="sumNumber()">C</button>
+            <button onClick="sumNumber()">DEL</button>
+            <button onClick="sumNumber()">%</button>
+            <button onClick="sumNumber()">/</button>
+            <button onClick="sumNumber()">7</button>
+            <button onClick="sumNumber()">8</button>
+            <button onClick="sumNumber()">9</button>
+            <button onClick="sumNumber()">*</button>
+            <button onClick="sumNumber()">4</button>
+            <button onClick="sumNumber()">5</button>
+            <button onClick="sumNumber()">6</button>
+            <button onClick="sumNumber()">-</button>
+            <button onClick="sumNumber()">1</button>
+            <button onClick="sumNumber()">2</button>
+            <button onClick="sumNumber()">3</button>
+            <button onClick="sumNumber()">+</button>
+            <button onClick="sumNumber()">.</button>
+            <button onClick="sumNumber()">0</button>
+            <button class="equal" onClick="sumNumber()">=</button>
         </div>
-        <button id="button" onClick="sumNumber()">+</button>
-        <button id="button" onClick="subNumber()">-</button><br>
-        <button id="button" onClick="divNumber()">/</button>
-        <button id="button" onClick="mulNumber()">*</button><br>
-        <h3>O PRODUTO SERÁ MOSTRADO NO TOPO DA PÁGINA.</h3>
     </div>
 </body>
 </html>
