changed onclick typo, moved script to body

--- a/index.html
+++ b/index.html
@@ -5,34 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Bababoey</title>
-
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="calc">
-            <input id="inputNumber" type="number" placeholder="0">
-            
-            <button onClick="sumNumber()">C</button>
-            <button onClick="sumNumber()">DEL</button>
-            <button onClick="sumNumber()">%</button>
-            <button onClick="sumNumber()">/</button>
-            <button onClick="sumNumber()">7</button>
-            <button onClick="sumNumber()">8</button>
-            <button onClick="sumNumber()">9</button>
-            <button onClick="sumNumber()">*</button>
-            <button onClick="sumNumber()">4</button>
-            <button onClick="sumNumber()">5</button>
-            <button onClick="sumNumber()">6</button>
-            <button onClick="sumNumber()">-</button>
-            <button onClick="sumNumber()">1</button>
-            <button onClick="sumNumber()">2</button>
-            <button onClick="sumNumber()">3</button>
-            <button onClick="sumNumber()">+</button>
-            <button onClick="sumNumber()">.</button>
-            <button onClick="sumNumber()">0</button>
-            <button class="equal" onClick="sumNumber()">=</button>
+            <input id="inputText" type="text"  placeholder="0">
+            <button onclick="">C</button>
+            <button onclick="">DEL</button>
+            <button onclick="">/</button>
+            <button onclick="">%</button>
+            <button onclick="">7</button>
+            <button onclick="">8</button>
+            <button onclick="">9</button>
+            <button onclick="">*</button>
+            <button onclick="">4</button>
+            <button onclick="">5</button>
+            <button onclick="">6</button>
+            <button onclick="">-</button>
+            <button onclick="">1</button>
+            <button onclick="">2</button>
+            <button onclick="">3</button>
+            <button onclick="">+</button>
+            <button onclick="">.</button>
+            <button onclick="">0</button>
+            <button class="equal" onClick="Result()">=</button>
+        <script src="./script.js"></script>
         </div>
     </div>
 </body>
